--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <!-- LEFT SIDE -->
             <div class="relative flex justify-center items-center mb-6 md:mb-0" data-aos="fade-right"
                 data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                <img src="assets/Frame 3.svg" alt="Your Photo" />
+                <img src="assets/Frame 3.png" alt="Your Photo" loading="lazy" />
             </div>
 
             <!-- RIGHT SIDE -->
@@ -346,7 +346,7 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
-                                alt="HTML" class="w-8 h-8" />
+                                alt="HTML" class="w-8 h-8" loading="lazy" />
                             <span class="text-lg font-semibold">HTML</span>
                         </div>
                         <span class="bg-highlight text-black text-sm font-bold px-2 py-0.5 rounded-full">95%</span>
@@ -363,7 +363,7 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
-                                alt="CSS" class="w-8 h-8" />
+                                alt="CSS" class="w-8 h-8" loading="lazy" />
                             <span class="text-lg font-semibold">CSS</span>
                         </div>
                         <span class="bg-highlight text-black text-sm font-bold px-2 py-0.5 rounded-full">90%</span>
@@ -380,7 +380,7 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-                                alt="JavaScript" class="w-8 h-8" />
+                                alt="JavaScript" class="w-8 h-8" loading="lazy" />
                             <span class="text-lg font-semibold">JavaScript</span>
                         </div>
                         <span class="bg-highlight text-black text-sm font-bold px-2 py-0.5 rounded-full">85%</span>
@@ -397,7 +397,7 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP"
-                                class="w-8 h-8" />
+                                class="w-8 h-8" loading="lazy" />
                             <span class="text-lg font-semibold">PHP</span>
                         </div>
                         <span class="bg-highlight text-black text-sm font-bold px-2 py-0.5 rounded-full">88%</span>
@@ -414,7 +414,7 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg"
-                                alt="Figma" class="w-8 h-8" />
+                                alt="Figma" class="w-8 h-8" loading="lazy" />
                             <span class="text-lg font-semibold">Figma</span>
                         </div>
                         <span class="bg-highlight text-black text-sm font-bold px-2 py-0.5 rounded-full">95%</span>
@@ -430,7 +430,7 @@
                     data-aos="fade-up" data-aos-delay="500" data-aos-once="true">
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center gap-3">
-                            <img src="assets/Canva_logo.webp" alt="Canva" class="w-8 h-8" />
+                            <img src="assets/Canva_logo.webp" alt="Canva" class="w-8 h-8" loading="lazy" />
                             <span class="text-lg font-semibold">Canva</span>
                         </div>
                         <span class="bg-highlight text-black text-sm font-bold px-2 py-0.5 rounded-full">90%</span>
@@ -480,7 +480,7 @@
                 <!-- Card -->
                 <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.02] hover:shadow-lg flex flex-col text-left transition-all duration-300"
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                    <img src="assets/projek2.svg" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4">
+                    <img src="assets/1.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     <h3 class="text-md font-semibold mb-2">Website Company Profile</h3>
                     <p class="text-xs text-gray-700 dark:text-gray-300 mb-4">
                         Website toko kosmetik yang informatif dengan tampilan menarik dan navigasi yang mudah.
@@ -518,7 +518,7 @@
 
                 <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.02] hover:shadow-lg flex flex-col text-left transition-all duration-300"
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                    <img src="assets/projek3.svg" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4">
+                    <img src="assets/3.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     <h3 class="text-md font-semibold mb-2">Website Eskul Handball Sekolah</h3>
                     <p class="text-xs text-gray-700 dark:text-gray-300 mb-4">
                         Informasi singkat kegiatan dan prestasi handball sekolah.
@@ -542,7 +542,7 @@
                             PHP</p>
                     </div>
 
-                    <a href="assets/detail-web.pdf" target="_blank" class="mt-auto inline-block 
+                    <a href="assets/detail-web.pdf" download class="mt-auto inline-block 
                         bg-highlight text-black 
                         dark:bg-highlight dark:text-darkbg 
                         text-xs font-semibold px-4 py-2 rounded-full 
@@ -556,7 +556,7 @@
 
                 <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.02] hover:shadow-lg flex flex-col text-left transition-all duration-300"
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                    <img src="assets/projek1.svg" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4">
+                    <img src="assets/2.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     <h3 class="text-md font-semibold mb-2">Desain UI/UX Simkatik</h3>
                     <p class="text-xs text-gray-700 dark:text-gray-300 mb-4">
                         Desain antarmuka Simkatik, sistem manajemen <br> toko kosmetik dengan fokus pada kemudahan
@@ -625,9 +625,9 @@
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
 
                     <!-- Thumbnail sertifikat -->
-                    <a href="assets/sertifikat_ui_ux.pdf" target="_blank">
+                    <a href="assets/sertifikat_ui_ux.pdf" download >
                         <img src="assets/serti-1.png" alt="Thumbnail Sertifikat"
-                            class="w-full h-48 object-cover rounded-md mb-4">
+                            class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     </a>
 
                     <!-- Judul -->
@@ -639,7 +639,7 @@
                     </p>
 
                     <!-- Tombol -->
-                    <a href="assets/sertifikat_ui_ux.pdf" target="_blank" class="mt-auto inline-block 
+                    <a href="assets/sertifikat_ui_ux.pdf" download class="mt-auto inline-block 
                         bg-highlight text-black 
                         dark:bg-highlight dark:text-darkbg 
                         text-xs font-semibold px-4 py-2 rounded-full 
@@ -655,9 +655,9 @@
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
 
                     <!-- Thumbnail sertifikat -->
-                    <a href="assets/sertifikat_css.pdf" target="_blank">
+                    <a href="assets/sertifikat_css.pdf" download >
                         <img src="assets/serti-3.png" alt="Thumbnail Sertifikat"
-                            class="w-full h-48 object-cover rounded-md mb-4">
+                            class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     </a>
 
                     <!-- Judul -->
@@ -669,7 +669,7 @@
                     </p>
 
                     <!-- Tombol -->
-                    <a href="assets/sertifikat_css.pdf" target="_blank" class="mt-auto inline-block 
+                    <a href="assets/sertifikat_css.pdf" download class="mt-auto inline-block 
                         bg-highlight text-black 
                         dark:bg-highlight dark:text-darkbg 
                         text-xs font-semibold px-4 py-2 rounded-full 
@@ -685,9 +685,9 @@
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
 
                     <!-- Thumbnail sertifikat -->
-                    <a href="assets/sertifikat_dicoding.pdf" target="_blank">
+                    <a href="assets/sertifikat_dicoding.pdf" download >
                         <img src="assets/serti-4.png" alt="Thumbnail Sertifikat"
-                            class="w-full h-48 object-cover rounded-md mb-4">
+                            class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     </a>
 
                     <!-- Judul -->
@@ -699,7 +699,7 @@
                     </p>
 
                     <!-- Tombol -->
-                    <a href="assets/sertifikat_dicoding.pdf" target="_blank" class="mt-auto inline-block 
+                    <a href="assets/sertifikat_dicoding.pdf" download class="mt-auto inline-block 
                         bg-highlight text-black 
                         dark:bg-highlight dark:text-darkbg 
                         text-xs font-semibold px-4 py-2 rounded-full 
