--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ibnu Nabil – Portfolio</title>
 
     <!-- Di dalam -->
@@ -189,59 +189,64 @@
     </section>
 
     <!-- Marquee Container -->
-    <div class="relative overflow-hidden bg-highlight" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400"
+    <div class="relative bg-highlight" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400"
         data-aos-once="true">
-        <!-- Marquee Track with duplicated content -->
-        <div class="marquee-track flex w-max animate-marquee gap-8 py-3">
-            <!-- Container isi x2 untuk looping -->
-            <template id="marquee-item">
-                <div class="flex items-center gap-6 font-clash text-black font-medium text-4xl">
+        <!-- Bungkus marquee-track dengan overflow-hidden -->
+        <div class="overflow-hidden">
+            <!-- Marquee Track with duplicated content -->
+            <div class="marquee-track flex w-max animate-marquee gap-8 py-3">
 
-                    <div class="flex items-center gap-4">
-                        <span>Web Design</span>
+                <!-- Template item -->
+                <template id="marquee-item">
+                    <div class="flex items-center gap-6 font-clash text-black font-medium text-4xl">
+                        <div class="flex items-center gap-4">
+                            <span>Web Design</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>App Design</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Junior</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Wireframe</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Community</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Development</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
                     </div>
+                </template>
 
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>App Design</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Junior</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Wireframe</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Community</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Development</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
+                <!-- Isi marquee akan digandakan 2x -->
+                <div class="flex items-center gap-8">
+                    <div class="flex items-center gap-8" id="marquee-copy-1"></div>
+                    <div class="flex items-center gap-8" id="marquee-copy-2"></div>
                 </div>
-            </template>
-            <!-- Isi marquee akan digandakan 2x -->
-            <div class="flex items-center gap-8">
-                <div class="flex items-center gap-8" id="marquee-copy-1"></div>
-                <div class="flex items-center gap-8" id="marquee-copy-2"></div>
+
             </div>
         </div>
     </div>
+
 
     <section id="about"
         class="min-h-screen flex items-center justify-center px-6 md:py-20 pt-12 pb-20 bg-lightbg text-darkbg dark:bg-darkbg dark:text-white">
@@ -480,7 +485,8 @@
                 <!-- Card -->
                 <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.02] hover:shadow-lg flex flex-col text-left transition-all duration-300"
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                    <img src="assets/1.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
+                    <img src="assets/1.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4"
+                        loading="lazy">
                     <h3 class="text-md font-semibold mb-2">Website Company Profile</h3>
                     <p class="text-xs text-gray-700 dark:text-gray-300 mb-4">
                         Website toko kosmetik yang informatif dengan tampilan menarik dan navigasi yang mudah.
@@ -518,7 +524,8 @@
 
                 <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.02] hover:shadow-lg flex flex-col text-left transition-all duration-300"
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                    <img src="assets/3.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
+                    <img src="assets/3.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4"
+                        loading="lazy">
                     <h3 class="text-md font-semibold mb-2">Website Eskul Handball Sekolah</h3>
                     <p class="text-xs text-gray-700 dark:text-gray-300 mb-4">
                         Informasi singkat kegiatan dan prestasi handball sekolah.
@@ -556,7 +563,8 @@
 
                 <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.02] hover:shadow-lg flex flex-col text-left transition-all duration-300"
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
-                    <img src="assets/2.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
+                    <img src="assets/2.png" alt="Proyek Image" class="w-full h-48 object-cover rounded-md mb-4"
+                        loading="lazy">
                     <h3 class="text-md font-semibold mb-2">Desain UI/UX Simkatik</h3>
                     <p class="text-xs text-gray-700 dark:text-gray-300 mb-4">
                         Desain antarmuka Simkatik, sistem manajemen <br> toko kosmetik dengan fokus pada kemudahan
@@ -625,7 +633,7 @@
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
 
                     <!-- Thumbnail sertifikat -->
-                    <a href="assets/sertifikat_ui_ux.pdf" download >
+                    <a href="assets/sertifikat_ui_ux.pdf" download>
                         <img src="assets/serti-1.png" alt="Thumbnail Sertifikat"
                             class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     </a>
@@ -655,7 +663,7 @@
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
 
                     <!-- Thumbnail sertifikat -->
-                    <a href="assets/sertifikat_css.pdf" download >
+                    <a href="assets/sertifikat_css.pdf" download>
                         <img src="assets/serti-3.png" alt="Thumbnail Sertifikat"
                             class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     </a>
@@ -685,7 +693,7 @@
                     data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true">
 
                     <!-- Thumbnail sertifikat -->
-                    <a href="assets/sertifikat_dicoding.pdf" download >
+                    <a href="assets/sertifikat_dicoding.pdf" download>
                         <img src="assets/serti-4.png" alt="Thumbnail Sertifikat"
                             class="w-full h-48 object-cover rounded-md mb-4" loading="lazy">
                     </a>
@@ -715,58 +723,65 @@
         </div>
     </section>
 
-    <div class="relative overflow-hidden bg-highlight">
-        <!-- Marquee Track with duplicated content -->
-        <div class="marquee-track flex w-max animate-marquee-1 gap-8 py-3">
-            <!-- Container isi x2 untuk looping -->
-            <template id="marquee-item-1">
-                <div class="flex items-center gap-6 font-clash text-black font-medium text-4xl">
+    <div class="relative bg-highlight">
+        <!-- Bungkus marquee-track dengan overflow-hidden -->
+        <div class="overflow-hidden">
+            <!-- Marquee Track -->
+            <div class="marquee-track flex w-max animate-marquee-1 gap-8 py-3">
 
-                    <div class="flex items-center gap-4">
-                        <span>Web Design</span>
+                <!-- Template isi (hanya digunakan oleh JS biasanya) -->
+                <template id="marquee-item-1">
+                    <div class="flex items-center gap-6 font-clash text-black font-medium text-4xl">
+
+                        <div class="flex items-center gap-4">
+                            <span>Web Design</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>App Design</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Junior</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Wireframe</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Community</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
+                        <div class="flex items-center gap-4">
+                            <span>Development</span>
+                        </div>
+
+                        <i data-lucide="sparkle" class="w-4 h-4"></i>
+
                     </div>
+                </template>
 
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>App Design</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Junior</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Wireframe</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Community</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
-                    <div class="flex items-center gap-4">
-                        <span>Development</span>
-                    </div>
-
-                    <i data-lucide="sparkle" class="w-4 h-4"></i>
-
+                <!-- Isi marquee digandakan 2x -->
+                <div class="flex items-center gap-8">
+                    <div class="flex items-center gap-8" id="marquee-copy-11"></div>
+                    <div class="flex items-center gap-8" id="marquee-copy-22"></div>
                 </div>
-            </template>
-            <!-- Isi marquee akan digandakan 2x -->
-            <div class="flex items-center gap-8">
-                <div class="flex items-center gap-8" id="marquee-copy-11"></div>
-                <div class="flex items-center gap-8" id="marquee-copy-22"></div>
+
             </div>
         </div>
     </div>
+
 
 
     <section id="contact" class="bg-lightbg dark:bg-darkbg text-black dark:text-white px-6 py-16 md:py-20">
