--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
                     <div class="flex flex-wrap gap-2 mb-6">
                         <p
                             class="py-1 px-3 border border-black/10 dark:border-white/10 bg-black/5 dark:bg-white/10 rounded-md text-xs font-semibold text-black dark:text-white">
+                            Website</p>
+                        <p
+                            class="py-1 px-3 border border-black/10 dark:border-white/10 bg-black/5 dark:bg-white/10 rounded-md text-xs font-semibold text-black dark:text-white">
                             HTML</p>
                         <p
                             class="py-1 px-3 border border-black/10 dark:border-white/10 bg-black/5 dark:bg-white/10 rounded-md text-xs font-semibold text-black dark:text-white">
@@ -532,6 +535,9 @@
                     </p>
 
                     <div class="flex flex-wrap gap-2 mb-6">
+                        <p
+                            class="py-1 px-3 border border-black/10 dark:border-white/10 bg-black/5 dark:bg-white/10 rounded-md text-xs font-semibold text-black dark:text-white">
+                            Website</p>
                         <p
                             class="py-1 px-3 border border-black/10 dark:border-white/10 bg-black/5 dark:bg-white/10 rounded-md text-xs font-semibold text-black dark:text-white">
                             HTML</p>
@@ -593,7 +599,21 @@
                     </a>
                 </div>
             </div>
-        </div>
+            <div class="mt-6">
+                <div class="bg-white dark:bg-white/10 p-6 rounded-2xl shadow-inner ring-1 ring-black/10 dark:ring-white/20 hover:ring-highlight hover:scale-[1.01] hover:shadow-lg flex flex-col text-left transition-all duration-300 max-w-5xl mx-auto"
+                    data-aos="fade-up" data-aos-delay="300" data-aos-once="true">
+
+                    <img src="assets/4.png" alt="Proyek Image" class="w-full aspect-[4/3] object-cover rounded-md mb-4"
+                        loading="lazy">
+
+
+                    <a href="assets/Portfolio Design - Ibnu Nabil Nur Ihsan.pdf"
+                        download
+                        class="mt-auto inline-block bg-highlight text-black dark:bg-highlight dark:text-darkbg text-xs font-semibold px-4 py-2 rounded-full hover:bg-black hover:text-highlight dark:hover:bg-darkbg dark:hover:text-highlight dark:hover:border dark:hover:border-highlight transition text-center border border-transparent">
+                        Lihat Detail
+                    </a>
+                </div>
+            </div>
     </section>
 
 
